--- a/server_templates/index.html
+++ b/server_templates/index.html
@@ -2,26 +2,53 @@
 <html lang="en" ng-app="mapotron">
 <head>
   <meta charset="utf-8">
-  <title ng-bind="$state.current.title"></title>
-  <link rel="stylesheet" href="/app/css/mapotron.css"/>
+  <meta name="citation_authors" content="Adam M. Wilson, Walter Jetz">
+  <meta name="developer" content="Jeremy Malczyk">
+  <meta name="email" content="jeremy@mol.org">
+  <meta property="og:type"            content="image" />
+  <meta property="og:title"           content="Global 1-km Cloud Cover" />
+  <meta property="og:description"     content="Cloud cover can influence numerous important ecological processes including reproduction, growth, survival, and behavior, yet our assessment of its importance at the appropriate spatial scales has remained remarkably limited. If captured over large extent yet at sufficiently fine spatial grain cloud cover dynamics may provide key information for delineating a variety of habitat types and predicting species distributions. Here we develop new near-global, fine-grain (≈1km) monthly cloud frequencies from 15 years of twice-daily MODIS satellite images that expose spatio-temporal cloud cover dynamics of previously undocumented global complexity. We demonstrate that cloud cover varies strongly in its geographic heterogeneity and that the direct, observation-based nature of cloud-derived metrics can improve predictions of habitats, ecosystem, and species distributions with reduced spatial autocorrelation compared to commonly used interpolated climate data. These findings support the fundamental role of remote sensing as an effective lens through which to understand and globally monitor the fine-grain spatial variability of key biodiversity and ecosystem properties." />
+  <meta property="og:image"           content="http://www.earthenv.org/images/cloud_demo-slide1.png" />
   <base href="/">
   <script type="text/javascript">
     var layers = {{layers|safe}};
   </script>
-</head>
-<body>
-  <div ui-view></div>
-  <script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=en&v=3.exp"></script>
-{% if PROD %}
-  <script src="app/js/app.min.js"></script>
-{% else %}
-  <script src="/bower_components/angular/angular.min.js"></script>
-  <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src='/bower_components/lodash/dist/lodash.min.js'></script>
-  <script src='/bower_components/angular-google-maps/dist/angular-google-maps.js'></script>
-  <script src="/app/js/helpers.js"></script>
+
+  <link rel="stylesheet" href="/app/css/bootstrap.min.css"/>
+  <link rel="stylesheet" type="text/css" href="/bower_components/ng-sortable/dist/ng-sortable.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/app/css/mapotron.css"/>
+  <script type="text/javascript" src="/bower_components/flexibility/dist/flexibility.js"></script>
+  <script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
+  <script type="text/javascript" src="/bower_components/angular-animate/angular-animate.min.js"></script>
+  <script type="text/javascript" src="/bower_components/angular-filter/dist/angular-filter.min.js"></script>
+  <script type="text/javascript" src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+  <script type="text/javascript" src="/bower_components/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
+  <script type="text/javascript" src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script type="text/javascript" src='/bower_components/lodash/dist/lodash.min.js'></script>
+  <script type="text/javascript" src='/bower_components/angular-google-maps/dist/angular-google-maps.js'></script>
+  <script type="text/javascript" src="/bower_components/ng-sortable/dist/ng-sortable.min.js"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-50401833-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <!-- Place this tag in your head or just before your close body tag. -->
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="/app/js/helpers.js?kgjgl"></script>
+  <script src="/app/js/mapstyles.js"></script>
   <script src="/app/js/app.js"></script>
-  <script src="/app/js/controllers.js"></script>
-{% endif %}
-</body>
+  <script src="/app/js/controllers.js?kjhsdkjhds"></script>
+  <script src="/app/js/directives.js"></script>
+
+  <title ng-bind="$state.current.title"></title>
+  <!--<link rel="import" href="/app/imports/components.html" />-->
+  <!--<link rel="import" href="/app/imports/application.html" />-->
+</head>
+<body ui-view></body>
+
 </html>
