Invalidating server cache.

--- a/server_templates/index.html
+++ b/server_templates/index.html
@@ -37,14 +37,14 @@
   <script src="/app/js/helpers.js?kgjgl"></script>
   <script src="/app/js/mapstyles.js"></script>
   <script src="/app/js/app.js"></script>
-  <script src="/app/js/controllers.js?kjhsdkjhds"></script>
+  <script src="/app/js/controllers.js?1233988"></script>
   <script src="/app/js/directives.js"></script>
   <script type="text/javascript">
             angular.module('mapotron.services',[])
                      .factory('getLayers', [function() {
                                 return function(msg) {
                                               return {{collections|safe}};
-                                                         }                                
+                                                         }
                                                                   }
                                                                          ]);
                                                                            </script>
